[project]
name = "envoy_data_plane"
version = "2.0.0b3"
description = "Python dataclasses for the Envoy Data-Plane-API"
authors = [{ name = "Vasili Syrakis", email = "cetanu@gmail.com" }]
requires-python = ">=3.11, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "betterproto2[all]>=0.9.0,<0.10"
]

[dependency-groups]
dev = [
    "betterproto2-compiler>=0.9.0,<0.10",
    "grpcio-tools>=1.75.1",
    "requests",
    "structlog",
    "vedro",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/envoy_data_plane",
    "src/envoy_data_plane_pb2",
]
[tool.hatch.build.targets.wheel]
packages = [
    "src/envoy_data_plane",
    "src/envoy_data_plane_pb2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
