[project]
name = "envoy_data_plane"
version = "2.0.0b7"
description = "Python dataclasses for the Envoy Data-Plane-API"
authors = [{ name = "Vasili Syrakis", email = "cetanu@gmail.com" }]
requires-python = ">=3.11, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "betterproto2[all]>=0.9.0,<0.10"
]

[dependency-groups]
dev = [
    "vedro",
]

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-build-scripts",
    "betterproto2-compiler>=0.9.0,<0.10",
    "grpcio-tools>=1.75.1",
    "requests",
    "structlog",
]

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [
    "python build.py"
]
artifacts = [
    "src/**/*.py",
]


[tool.hatch.build.targets.sdist]
include = [
    "src/**/*.py",
    "build.py",
]
exclude = [
    "pyproject.toml",
    "uv.lock",
    "/.github",
    "/scenarios",
    "/dist",
    "/BUILD",
]
#
# [tool.hatch.build.targets.wheel]
# packages = [
#     "envoy_data_plane",
#     "envoy_data_plane_pb2",
# ]
# sources = ["src"]
